k8s/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: commx-route
  namespace: commx
  labels:
    app.kubernetes.io/name: commx-route
spec:
  parentRefs:
    - name: commx-gateway
  hostnames:
    - "commx.local.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /socket.io
      backendRefs:
        - name: backend
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 3000
